--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   "dependencies": {
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^5.20.0",
-    "@remix-run/css-bundle": "*",
-    "@remix-run/express": "*",
-    "@remix-run/node": "*",
-    "@remix-run/react": "*",
+    "@remix-run/css-bundle": "2.14.0",
+    "@remix-run/express": "2.14.0",
+    "@remix-run/node": "2.14.0",
+    "@remix-run/react": "2.14.0",
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.6.0",
     "compression": "^1.7.4",
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
-    "@remix-run/dev": "*",
+    "@remix-run/dev": "2.14.0",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@types/bcryptjs": "^2.4.6",
