--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -121,7 +121,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint, typecheck, vitest, cypress]
     # only deploy main/dev branch on pushes
-    if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' && secrets.FLY_API_TOKEN != '' }}
+    if: false
+    # if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
 
     steps:
       - name: ⬇️ Checkout repo
