Use react-auth from remix-forge

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/blue-stack-template"
 SESSION_SECRET="super-duper-s3cret"
+
+# Env vars added by Remix Forge
+APP_URL="http://localhost:3000"
