--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "prom-client": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "remix-auth": "^3.7.0",
+    "remix-auth-form": "^1.5.0",
     "source-map-support": "^0.5.21",
     "tiny-invariant": "^1.3.3"
   },
