--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.15.0",
     "@faker-js/faker": "^9.2.0",
     "@remix-run/dev": "2.14.0",
     "@testing-library/cypress": "^10.0.2",
@@ -73,7 +73,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/coverage-v8": "^2.1.5",
     "autoprefixer": "^10.4.20",
-    "cookie": "^1.0.1",
+    "cookie": "^1.0.2",
     "cypress": "^13.16.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
@@ -88,7 +88,7 @@
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-testing-library": "^6.4.0",
+    "eslint-plugin-testing-library": "^6.5.0",
     "globals": "^15.12.0",
     "happy-dom": "^15.11.6",
     "msw": "^2.6.5",
@@ -101,6 +101,7 @@
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.5"
